Css style added for the header section

--- a/index.html
+++ b/index.html
@@ -6,11 +6,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Source+Code+Pro:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Diwa</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1 class="title">Diwa</h1>
+      <nav class="menu">
+        <a class="link" href="#pricing">Pricing</a>
+        <a class="link" href="#features">Features</a>
+        <a class="link" href="#contact">Contact</a>
+      </nav>
+      <div class="btn-container">
+        <button class="btn">Login</button>
+        <button class="btn">Enter App</button>
+      </div>
+    </header>
+  </body>
 </html>
