Added pricing section

--- a/index.html
+++ b/index.html
@@ -13,17 +13,46 @@
     <title>Diwa</title>
   </head>
   <body>
-    <header class="header">
-      <h1 class="title">Diwa</h1>
-      <nav class="menu">
-        <a class="link" href="#pricing">Pricing</a>
-        <a class="link" href="#features">Features</a>
-        <a class="link" href="#contact">Contact</a>
+    <header class="header container">
+      <h2 class="header__title">Diwa</h2>
+      <nav class="header__menu">
+        <a class="header__link" href="#pricing">Pricing</a>
+        <a class="header__link" href="#features">Features</a>
+        <a class="header__link" href="#contact">Contact</a>
       </nav>
-      <div class="btn-container">
+      <div class="header__btn-container">
         <button class="btn">Login</button>
         <button class="btn">Enter App</button>
       </div>
     </header>
+    <section class="hero container">
+      <h1 class="hero__title">Where Flavor Meets Essence.</h1>
+      <p class="hero__description">
+        Discover the essence of Filipino flavors at our bakery. From traditional
+        pandesal to delectable kakanin, our handcrafted treats celebrate the
+        warmth of home. Join us on a delicious journey through the heart of
+        Filipino culinary traditions.
+      </p>
+      <a href="#features" class="btn">Learn more</a>
+    </section>
+    <section class="pricing container">
+      <h2 class="pricing__title">Simple Transparent Pricing</h2>
+      <p class="pricing__description">
+        It doesnt matter what size your business is our software wont work well
+        for you.
+      </p>
+      <div class="pricing__box">
+        <h3 class="pricing__Price">£5</h3>
+        <h4 class="pricing_plan">Starter</h4>
+      </div>
+      <div class="pricing__box">
+        <h3 class="pricing__Price">£7</h3>
+        <h4 class="pricing_plan">Business</h4>
+      </div>
+      <div class="pricing__box">
+        <h3 class="pricing__Price">£8</h3>
+        <h4 class="pricing_plan">Interplan</h4>
+      </div>
+    </section>
   </body>
 </html>
